# data_curator_ctx_tool

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  validation_progress.json  validation_results_20250812_095223.json  weshare_session.json
runnables/: run_ctx_agent.py  run_scraper.py  test_run.py
src/db/: database.py  init_db.py  models.py
src/workflow/: ctx_agent.py  html_to_markdown.py  sso_weshare_scraper.py  validate_metadata.py
tests/: test_database.py  test_scraper.py
